--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -10,4 +10,7 @@ jobs:
         with:
           node-version: '14'
       - run: npm install -g bats
+      - run: npm install -g nodemon
+      - run: node -v
+      - run: nodemon -v
       - run: bats -v
