add new jobs in hello wolrd actions

--- a/.github/workflows/hello-world-actions.yaml
+++ b/.github/workflows/hello-world-actions.yaml
@@ -10,3 +10,7 @@ jobs:
         with:
           node-version: '18'
       - run: node -v
+  deploy-to-dev:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo Deploy to stage dev
